policies/4-egress-google.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: google-web-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http-google
      protocol: HTTP
    hosts:
    - www.google.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-google-dr
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: google

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-google-through-egress-gateway
spec:
  hosts:
  - www.google.com
  gateways:
  - mesh
  - google-web-egressgateway
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: google
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - google-web-egressgateway
      port: 80
    route:
    - destination:
        host: www.google.com
        port:
          number: 80
      weight: 100
