policies/google.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google.com
spec:
  hosts:
  - google.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  exportTo:
  - "."
